k8s/local/app.yml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: pwa-deployment
  labels:
    app: MyApp
spec:
  replicas: 1
  template:
    metadata:
      name: app
      labels:
        app: MyApp
        env: development
      annotations:
        pod.beta.kubernetes.io/init-containers: '[
          {
            "name": "assets",
            "image": "node:v1",
            "command": ["sh", "-c"],
            "args": ["cp /var/www/clientBuild/* /assets/"],
            "volumeMounts": [
              {
                "mountPath": "/assets",
                "name": "pwa-disk"
              }
            ]
          }
        ]'
    spec:
      containers:
      - name: nginx
        image: nginx:v1
        command: [nginx, -c, /nginx.prod.conf, -g, "daemon off;"]
        resources:
          limits:
            memory: "500Mi"
            cpu: "100m"
        imagePullPolicy: Never  
        volumeMounts:
          - mountPath: /usr/share/nginx/html
            name: pwa-disk
            readOnly: true
        ports:
        - name: nginx
          containerPort: 80
      - name: nodejs
        image: node:v1
        command: [npm, start]
        resources:
          limits:
            memory: "500Mi"
            cpu: "100m"
        imagePullPolicy: Never  
        ports:
        - name: app
          containerPort: 3000
        - name: api
          containerPort: 3001
      volumes:
        - name: pwa-disk
          emptyDir: {}
